# Cargo.toml
[package]
name = "hsemulate"
version = "0.3.5"
edition = "2021"
description = "Local runner for HubSpot Workflow Custom Code Actions (JS/Python) with assertions, snapshots, flaky detection, and budgets."
license = "MIT"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
tempfile = "3.12"
tokio = { version = "1.39", features = ["process", "macros", "rt-multi-thread", "io-util"] }
sysinfo = "0.30"
regex = "1.10"
notify = "6.1"
walkdir = "2.5"
chrono = "0.4.42"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
sha2 = "0.10"
hex = "0.4"
axum = "0.7"
serde = { version = "1", features = ["derive"] }
uuid = { version = "1", features = ["v4"] }
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-http = { version = "0.5", features = ["trace"] }
